--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,11 @@
 {
-  "short_name": "NovaTVD",
-  "name": "Nova TVD",
+  "short_name": "Eric",
+  "name": "Eric",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "logotest.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logotest.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": ".",
